--- a/Patient.Api/Patient.Api.Client/Pages/PatientPages/MedicalInterview/ChangeMedicalInterwiew.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/PatientPages/MedicalInterview/ChangeMedicalInterwiew.razor
@@ -67,6 +67,14 @@
         </section>
         <section>
             <div class="row text-center">
+                <p>Jeżeli jesteś tutaj dla profilaktyki - kliknij tutaj: </p>
+                <btn type="button" class="btn btn-outline-primary btn-custom-outline">
+                    Profilaktyka
+                </btn>
+            </div>
+        </section>
+        <section>
+            <div class="row text-center">
                 <btn type="button" class="btn btn-primary btn-custom-primary" @onclick="HandleAddDiseases">
                     Zatwierdz
                 </btn>
