--- a/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorMenu.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Doctor/DoctorMenu.razor
@@ -32,7 +32,11 @@
                     <span aria-hidden="true">Czat</span> 
                 </NavLink>
             </div>
-            
+            <div class="nav-item">
+                <NavLink class="nav-link" href="/lekarz/czat">
+                    <span aria-hidden="true">Czat</span>
+                </NavLink>
+            </div>
         </div>
         <div class="col-3 d-flex d-flex-column justify-content-center align-items-center">
             <div class="dropdown">
